--- a/config/roles/vx.install-blender/tasks/main.yml
+++ b/config/roles/vx.install-blender/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: download blender
   get_url:
     url: "https://download.blender.org/release/Blender{{install_blender_version}}/blender-{{install_blender_version}}{{install_blender_point}}-linux-glibc{{install_blender_glibc_version}}-x86_64.tar.bz2"
-    dest: "downloads/blender-{{install_blender_version}}{{install_blender_point}}.tar.bz2"
+    dest: "{{vx_root}}/downloads/blender-{{install_blender_version}}{{install_blender_point}}.tar.bz2"
     checksum: "{{install_blender_checksum}}"
     # owner: "{{ default_user }}"
   async: 1000
@@ -12,4 +12,3 @@
     src: "{{vx_root}}/downloads/blender-{{install_blender_version}}{{install_blender_point}}.tar.bz2"
     dest: "{{vx_root}}/apps"
     remote_src: yes
-
