--- a/config/local.yml
+++ b/config/local.yml
@@ -1,15 +1,11 @@
-- hosts: localhost
+- hosts: docker_containers
+  remote_user: sim
   become: true
-  pre_tasks:
-    - name: Loading environment variables
-      tags: always
-      set_fact:
-        vx_root: "{{ lookup('env', 'VX_ROOT') }}"
   tasks:
   - name: Install tools
     apt:
       name: ['htop', 'tmux']
   roles:
     - vx.install-common
-    - vx.install-blender
-    - vx.install-simbotic-engine
+    # - vx.install-blender
+    # - vx.install-simbotic-engine
