--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,18 +1,12 @@
 version: '3'
 services:
   ipfs:
-    build:
-      context: ./ipfs
-      args:
-        - USER_ID
-        - GROUP_ID
-    image: vx/ipfs:latest
-
+    image: ipfs/go-ipfs:master
     container_name: vx_ipfs_host
     volumes:
     - ./ipfs/export:/export
     - ./ipfs/data:/data/ipfs
-    - ./secrets/ipfs/swarm.key:/data/ipfs/swarm.key
+    - ../config/secrets/ipfs/swarm.key:/data/ipfs/swarm.key
     ports:
     - 5001:5001
     - 4001:4001
