--- a/config/roles/vx.install-blender/tasks/main.yml
+++ b/config/roles/vx.install-blender/tasks/main.yml
@@ -4,6 +4,9 @@
     url: "https://download.blender.org/release/Blender{{install_blender_version}}/blender-{{install_blender_version}}{{install_blender_point}}-linux-glibc{{install_blender_glibc_version}}-x86_64.tar.bz2"
     dest: "{{vx_root}}/downloads/blender-{{install_blender_version}}{{install_blender_point}}.tar.bz2"
     checksum: "{{install_blender_checksum}}"
+  become: true
+  become_user: "{{user_to_configure}}"
+  become_method: sudo
   async: 1000
 
 - name: unpack blender installer
@@ -11,3 +14,6 @@
     src: "{{vx_root}}/downloads/blender-{{install_blender_version}}{{install_blender_point}}.tar.bz2"
     dest: "{{vx_root}}/apps"
     remote_src: yes
+  become: true
+  become_user: "{{user_to_configure}}"
+  become_method: sudo
