projects directory to be the default mounting point for docker containers.

--- a/config/roles/vx.create-directories/tasks/main.yml
+++ b/config/roles/vx.create-directories/tasks/main.yml
@@ -9,3 +9,8 @@
     path: "{{vx_root}}/downloads"
     state: directory
     mode: 0755
+- name: create 'projects' directory
+  file:
+    path: "{{vx_root}}/projects"
+    state: directory
+    mode: 0755
