Inventory updated. Added Krita as basic tool.

--- a/config/local.yml
+++ b/config/local.yml
@@ -1,18 +1,18 @@
 - name: Setting variables to use across plays
-  hosts: all
+  hosts: vertex
   tasks:
     - set_fact:
         user_to_configure: "{{ansible_user_id}}"
         vx_root: "{{ansible_env.HOME}}/vx"
 
 - name: Create vx directories
-  hosts: all
+  hosts: vertex
   gather_facts: no
   roles:
     - vx.create-directories
 
 - name: Install prerequisite packages and basic tools
-  hosts: all
+  hosts: vertex
   gather_facts: no
   become: true
   roles:
@@ -20,7 +20,7 @@
     - vx.install-basic-tools
 
 - name: Install applications
-  hosts: all
+  hosts: vertex
   gather_facts: no
   roles:
     - vx.install-blender
