--- a/services/ipfs/Dockerfile
+++ b/services/ipfs/Dockerfile
@@ -1,30 +1,13 @@
-FROM ubuntu:bionic-20190204
+FROM golang:1.12.1-stretch as builder
 
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y --no-install-recommends apt-utils build-essential sudo ca-certificates git curl
+ENV SRC_DIR /go-ipfs
 
-RUN cd /tmp
-RUN curl -O https://dl.google.com/go/go1.12.linux-amd64.tar.gz
-RUN mv go1.12.linux-amd64 /usr/local/go
+WORKDIR /
 
-ENV PATH=$PATH:/usr/local/go/bin
+RUN git clone https://github.com/ipfs/go-ipfs.git
 
-RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
+RUN cd $SRC_DIR && go mod download
 
-ENV GX_IPFS ""
-ENV SRC_DIR /src/ipfs/go-ipfs
-RUN git clone -b v0.4.19 https://github.com/ipfs/go-ipfs.git /go/src/github.com/ipfs/go-ipfs
-
-# Build the thing.
-# Also: fix getting HEAD commit hash via git rev-parse.
-# Also: allow using a custom IPFS API endpoint.
-RUN cd $SRC_DIR \
-  && ([ -z "$GX_IPFS" ] || echo $GX_IPFS > /root/.ipfs/api) \
-  && make build
-
-# Get su-exec, a very minimal tool for dropping privileges,
-# and tini, a very minimal init daemon for containers
 ENV SUEXEC_VERSION v0.2
 ENV TINI_VERSION v0.16.1
 RUN set -x \
@@ -37,50 +20,16 @@ RUN set -x \
   && wget -q -O tini https://github.com/krallin/tini/releases/download/$TINI_VERSION/tini \
   && chmod +x tini
 
-# Now comes the actual target image, which aims to be as small as possible.
+RUN apt-get update && apt-get install -y ca-certificates
+
 FROM busybox:1-glibc
-MAINTAINER Lars Gierth <lgierth@ipfs.io>
 
-# Get the ipfs binary, entrypoint script, and TLS CAs from the build container.
-COPY --from=0 $SRC_DIR/cmd/ipfs/ipfs /usr/local/bin/ipfs
-COPY --from=0 $SRC_DIR/bin/container_daemon /usr/local/bin/start_ipfs
-COPY --from=0 /tmp/su-exec/su-exec /sbin/su-exec
-COPY --from=0 /tmp/tini /sbin/tini
-COPY --from=0 /etc/ssl/certs /etc/ssl/certs
+ENV SRC_DIR /go-ipfs
 
-# This shared lib (part of glibc) doesn't seem to be included with busybox.
-COPY --from=0 /lib/x86_64-linux-gnu/libdl-2.24.so /lib/libdl.so.2
-
-# Swarm TCP; should be exposed to the public
-EXPOSE 4001
-# Daemon API; must not be exposed publicly but to client services under you control
-EXPOSE 5001
-# Web Gateway; can be exposed publicly with a proxy, e.g. as https://ipfs.example.org
-EXPOSE 8080
-# Swarm Websockets; must be exposed publicly when the node is listening using the websocket transport (/ipX/.../tcp/8081/ws).
-EXPOSE 8081
-
-ARG USER_ID=1000
-ARG GROUP_ID=1000
-
-# Create the fs-repo directory and switch to a non-privileged user.
-ENV IPFS_PATH /data/ipfs
-RUN mkdir -p $IPFS_PATH \
-  && adduser -D -h $IPFS_PATH -u ${USER_ID} -G users ipfs \
-  && chown ipfs:users $IPFS_PATH
-
-# Expose the fs-repo as a volume.
-# start_ipfs initializes an fs-repo if none is mounted.
-# Important this happens after the USER directive so permission are correct.
-VOLUME $IPFS_PATH
-
-# The default logging level
-ENV IPFS_LOGGING ""
-
-# This just makes sure that:
-# 1. There's an fs-repo, and initializes one if there isn't.
-# 2. The API and Gateway are accessible from outside the container.
-ENTRYPOINT ["/sbin/tini", "--", "/usr/local/bin/start_ipfs"]
-
-# Execute the daemon subcommand by default
-CMD ["daemon", "--migrate=true"]
+COPY --from=builder $SRC_DIR/cmd/ipfs/ipfs /usr/local/bin/ipfs
+COPY --from=builder /tmp/su-exec/su-exec /sbin/su-exec
+COPY --from=builder /tmp/tini /sbin/tini
+COPY --from=builder /etc/ssl/certs /etc/ssl/certs
+COPY --from=builder /lib/x86_64-linux-gnu/libdl-2.24.so /lib/libdl.so.2
+COPY bin/start_ipfs.sh /usr/local/bin/start_ipfs
+# COPY --from=builder $SRC_DIR/bin/container_daemon /usr/local/bin/start_ipfs
