--- a/services/ipfs/Dockerfile
+++ b/services/ipfs/Dockerfile
@@ -8,6 +8,8 @@ RUN git clone https://github.com/ipfs/go-ipfs.git
 
 RUN cd $SRC_DIR && go mod download
 
+RUN cd $SRC_DIR && make build
+
 ENV SUEXEC_VERSION v0.2
 ENV TINI_VERSION v0.16.1
 RUN set -x \
@@ -22,7 +24,7 @@ RUN set -x \
 
 RUN apt-get update && apt-get install -y ca-certificates
 
-FROM busybox:1-glibc
+FROM ubuntu:18.04
 
 ENV SRC_DIR /go-ipfs
 
@@ -32,4 +34,32 @@ COPY --from=builder /tmp/tini /sbin/tini
 COPY --from=builder /etc/ssl/certs /etc/ssl/certs
 COPY --from=builder /lib/x86_64-linux-gnu/libdl-2.24.so /lib/libdl.so.2
 COPY bin/start_ipfs.sh /usr/local/bin/start_ipfs
-# COPY --from=builder $SRC_DIR/bin/container_daemon /usr/local/bin/start_ipfs
+
+# Swarm TCP; should be exposed to the public
+EXPOSE 4001
+# Daemon API; must not be exposed publicly but to client services under you control
+EXPOSE 5001
+# Web Gateway; can be exposed publicly with a proxy, e.g. as https://ipfs.example.org
+EXPOSE 8080
+# Swarm Websockets; must be exposed publicly when the node is listening using the websocket transport (/ipX/.../tcp/8081/ws).
+EXPOSE 8081
+
+ENV IPFS_PATH /data/ipfs
+
+RUN mkdir -p $IPFS_PATH
+
+ARG USER_ID=1000
+ARG GROUP_ID=1000
+
+RUN groupadd -g ${GROUP_ID} ipfs && \
+    useradd -m -l -u ${USER_ID} -g ipfs ipfs && \
+    echo "ipfs:ipfs" | chpasswd && adduser ipfs sudo && \
+    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
+    chown ipfs:ipfs $IPFS_PATH
+
+USER ipfs
+
+VOLUME $IPFS_PATH
+
+# The default logging level
+ENV IPFS_LOGGING ""
